Removed unnecessary files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,40 +1,11 @@
 {
     "files.associations": {
-        "main.C": "cpp",
-        "string": "cpp",
-        "SIMPLESOCKET.C": "cpp",
         "server.C": "cpp",
+        "main.C": "cpp",
         "SHA256.C": "cpp",
+        "SIMPLESOCKET.C": "cpp",
         "TASK1.C": "cpp",
-        "SHA256.H": "cpp",
-        "mainTest.C": "cpp",
-        "client.C": "cpp",
-        "SIMPLESOCKET.H": "cpp",
-        "iostream": "cpp",
-        "ostream": "cpp",
-        "*.tcc": "cpp",
-        "iosfwd": "cpp",
-        "sstream": "cpp",
-        "new": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cstdint": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "exception": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "system_error": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "cmath": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "initializer_list": "cpp",
-        "string_view": "cpp"
+        "TASK2.C": "cpp",
+        "TASK5.C": "cpp"
     }
 }
